# PrussianStudio

./: .gitignore  Cargo.toml  README.md
axum_server/: Cargo.toml
axum_server/assets/HMI/: index.html
axum_server/assets/logger/: eframe_template.js
axum_server/src/: main.rs
device/: Cargo.toml
device/src/: config.rs  lib.rs  logger_channel.rs
device/src/allen_bradley/: mod.rs
device/src/calculation/: mod.rs
device/src/channel/: alarm.rs  mod.rs
device/src/modbus/: mod.rs
egui_extras/: Cargo.toml
egui_extras/src/: lib.rs
image/: Cargo.toml
image/src/: image.rs  lib.rs
logger/: Cargo.toml
logger/src/: channel_pattern.rs  lib.rs
prussian_studio_gui/: Cargo.toml  config.ron  config_file.ron
prussian_studio_gui/src/: app.rs  app_threads.rs  config.ron  config.rs  crossbeam.rs  fonts.rs  lib.rs  main.rs  setup_app.rs  status.rs  window.rs
prussian_studio_gui/src/panels/: bottom_panel.rs  central_panel.rs  left_panel.rs  mod.rs  right_panel.rs  top_panel.rs
prussian_studio_gui/src/ui/: mod.rs
prussian_studio_gui/src/ui/menu_bars/: mod.rs
prussian_studio_gui/src/ui/panels/: central_panel.rs  left_panel.rs
prussian_studio_gui/src/ui/windows/: device_windows.rs  logger_windows.rs  mod.rs
prussian_studio_gui/src/windows/: channel_config.rs  mod.rs
prussian_studio_server/: .gitignore  Cargo.toml  identity.pfx
prussian_studio_server/src/: main.rs
server/: Cargo.toml  data.db  data.db-shm  data.db-wal
server/assets/HMI/: index.html
server/certs/: cert.pem  key.rsa
server/src/: main.rs
