[package]

name = "axum_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.0-rc.1", features = ["ws", "headers"] }
headers = "0.3"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.1.2", features = ["v4"] }
colored = "2.0.0"
chrono = "0.4.22"
axum-extra = { version = "0.3.7", features = ["spa"] }
tokio-util = { version = "0.7.4", features = ["io"] }
