[package]
name = "lib_device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
tokio-modbus = { version = "0.5.3", features = ["sync", "rtu"] }
tokio-serial = "5.4.3"
