[package]
name = "lib_device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
tokio-modbus = { version = "0.5.3", features = ["sync", "rtu"] }
tokio-serial = "5.4.3"
anyhow = "1.0.66"
clap = { version = "4.0.22", features = ["derive"] }
colored = "2.0.0"
futures-util = { version = "0.3.25", features = ["sink"] }
rseip = { git = "https://github.com/Joylei/eip-rs.git" }
tokio = { version = "1.21.2", features = ["rt-multi-thread"] }
     