[package]
name = "lib_logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.21"
lib_device = { path = "../device/" }
serde = { version = "1.0.143", features = ["derive"] }
anyhow = "1.0.61"
regex = "1.6.0"
