[package]
name = "prussian_studio_gui"
default-run = "prussian_studio_gui_bin"
version = "0.1.0"
authors = ["Abdelkader Madoui <abdelkadermadoui@protonmail.com>"]
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "prussian_studio_gui_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
egui = "0.18.0"
egui_extras = { path = "../egui_extras/" }
eframe = { version = "0.18.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
lib_device = { path = "../device" }
lib_logger = { path = "../logger" }
rand = "0.8.5"
crossbeam-channel = "0.5.5"
tungstenite = "0.17.3"
url = "2.2.2"
env_logger = "0.9.0"
serde_json = "1.0.83"
regex = "1.6.0"
rfd = "0.10.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"


[profile.release]
opt-level = 2 # fast and small wasm


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/egui" }
# eframe = { path = "../egui/eframe" }
