[package]
name = "prussian_studio_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio = { version = "1.0.0", default-features = false, features = ["io-util"] }
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }
futures-channel = "0.3.21"

[dependencies.tungstenite]
version = "0.17.3"
default-features = false

[dependencies.native-tls-crate]
optional = true
package = "native-tls"
version = "0.2.7"

[dependencies.rustls]
optional = true
version = "0.20.0"

[dependencies.rustls-native-certs]
optional = true
version = "0.6.1"

[dependencies.tokio-native-tls]
optional = true
version = "0.3.0"

[dependencies.tokio-rustls]
optional = true
version = "0.23.0"

[dependencies.webpki]
optional = true
version = "0.22.0"

[dependencies.webpki-roots]
optional = true
version = "0.22.1"

[dev-dependencies]
futures-channel = "0.3"
hyper = { version = "0.14", default-features = false, features = ["http1", "server", "tcp"] }
tokio = { version = "1.0.0", default-features = false, features = ["io-std", "macros", "net", "rt-multi-thread", "time"] }
url = "2.0.0"
env_logger = "0.9"
